--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,11 @@
 .DS_Store
 node_modules/
 dist/
+npm-debug.log
+yarn-error.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 test/unit/coverage
 test/e2e/reports
 selenium-debug.log
-
-# Editor directories and files
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-.DS_Store
-node_modules
-*.log
-explorations
-TODOs.md
-dist/*.gz
-dist/*.map
-dist/vue.common.min.js
-test/e2e/reports
-test/e2e/screenshots
-coverage
-.idea
