--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.2.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.2.0",
+    "vue-text-mask": "^5.1.1",
     "vuex": "^2.1.1",
     "vuex-i18n": "^1.3.1",
     "vux": "^2.2.1"
